# crab-news

./: .gitignore  .markdownlint-cli2.yaml  .sql-formatter.json  .sqllsrc.json  Cargo.toml  Crux.toml  README.md  README.org  leptosfmt.toml  project-notes.md  project-notes.org  rust-toolchain.toml
.github/styles/config/vocabularies/Crabs/: accept.txt
.kiro/: mcp.json
dioxus/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
dioxus/assets/: tailwind.css
dioxus/src/: app.rs  content.rs  core.rs  entries.rs  feeds.rs  main.rs  navbar.rs
dioxus/src/app/: content.rs  core.rs  entries.rs  feeds.rs  http.rs  navbar.rs
docs/: CODEOWNERS  crux-mcp-setup.md  project-notes.md
migrations/: 20250509143158_accounts-tables.sql  20250509143158_create_accounts_table.down.sql  20250509143158_create_accounts_table.up.sql  20250509143230_create_opml_outlines_tables.down.sql  20250509143230_create_opml_outlines_tables.up.sql  20250509143230_opml-outlines-tables.sql  20250509143237_create_feeds_rs_tables.down.sql  20250509143237_create_feeds_rs_tables.up.sql  20250509143237_feeds-rs-tables.sql  20250509143435_accounts-views.sql  20250509143435_create_accounts_views.down.sql  20250509143435_create_accounts_views.up.sql  20250509143441_create_folder_views.down.sql  20250509143441_folder-views.sql  20250509143454_create_feed_views.down.sql  20250509143454_feed-views.sql  20250509143459_create_smart_views.down.sql  20250509143459_create_smart_views.up.sql  20250509143459_smart-views.sql  20250509143509_create_utils_views.down.sql  20250509143509_create_utils_views.up.sql  20250509143509_utils-views.sql
scripts/: build-wasm.sh  setup-crux-mcp.sh
shared/: Cargo.toml  example_export.opml  invalid_opml_version.opml  invalid_xml.opml
shared/src/: app.rs  lib.rs  macros.rs
shared/src/app/: account.rs  accounts.rs  error.rs  feeds.rs  settings.rs  subscriptions.rs
shared/test_files/: Subscriptions.opml  gwr_atom.xml  invalid_body.opml
shared/tests/: with_tester.rs
shared_types/: Cargo.toml  build.rs
sqlite/: mv-to-toml-with-config-rs.sql
sqlite/01 - create tables/: 01-create-accounts-table.sql  02-create-subs-tables.sql  03-create-feeds-tables.sql  03-create-other-feeds-tables.sql
sqlite/02 - create indexes/: 02-create-subs-index.sql
sqlite/03 - insert data/: 01-insert-accounts.sql  02-insert-subs.sql
sqlite/04 - create views/: 02-create-folder-views.sql
sqlite/06 - drops/: 01-drop-all-views.sql
surreal/01 - create tables/: 01-create-accounts-table.surql  02-create-folders-tables.surql  02-create-subs-tables.surql  03-create-feeds-tables.surql
surreal/02 - create indexes/: 01-create-accounts-index.surql  03-create-feeds-index.surql
surreal/03 - insert data/: 01-insert-accounts.surql  03-insert-feeds.surql
surreal/04 - create views/: 03-create-feed-views.surql  05-create-utils-views.surql
surreal/05 - selects/: 99-selects-wip.surql
tauri/: Cargo.toml  Trunk.toml  index.html
tauri/src/: app.rs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: http.rs  lib.rs
tauri/src/app/: content.rs  entries.rs  feeds.rs  navbar.rs
tauri/src/css/: tailwind.css
web-dioxus/: Cargo.toml
web-dioxus/src/: main.rs
web-leptos/: Cargo.toml  Trunk.toml  index.html
web-leptos/src/: app.rs  core.rs  http.rs  main.rs
web-leptos/src/app/: core.rs  entries.rs  feeds.rs  navbar.rs
web-leptos/src/css/: tailwind.css
