[workspace]
members = ["shared", "shared_types", "tauri/src-tauri"]
resolver = "1"

[workspace.package]
authors = ["Andrea Callea"]
edition = "2021"
repository = "https://github.com/crabapps/crab-news"
license = "Apache-2.0"
description = "A multi-platform RSS client for desktop and mobile written in Rust."
keywords = ["atom", "rss", "feed-reader", "rss-reader", "news-client"]
rust-version = "1.83"

[workspace.dependencies]
anyhow = "1.0"
crux_core = "0.13"
crux_http = "0.12"
serde = "1.0"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
