[package]
name = "dioxus"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
dioxus = { version = "0.6.0", features = [] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-regular", "font-awesome-solid"] }
shared = { path = "../shared" }
anyhow.workspace = true
gloo-net = "0.6.0"
futures-util = "0.3.31"
wasm-bindgen-futures = "0.4.50"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
