[package]
name = "crab-news"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-material-icons = "4.0"
shared = { path = "../shared" }
anyhow.workspace = true
gloo-net = "0.6.0"
futures-util = "0.3.31"
wasm-bindgen-futures = "0.4.56"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]
