[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen", "crux_http/typegen"]

[dependencies]
anyhow.workspace = true
crux_core.workspace = true
crux_http.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
uniffi = "0.29.0"
wasm-bindgen = "0.2.100"
opml = "1.1"
feed-rs = "2.3.1"
chrono = { version = "0.4.39", features = ["unstable-locales"] }
thiserror = "2.0.11"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.29.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }

[dev-dependencies]
assert_fs = "1.1"
futures-test = "0.3"
assert_matches = "1.5"
