[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen", "crux_http/typegen"]

[dependencies]
anyhow.workspace = true
crux_core.workspace = true
crux_http.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
uniffi = "0.30.0"
wasm-bindgen = "0.2.106"
opml = "1.1"
feed-rs = "2.3.1"
chrono = { version = "0.4.42", features = ["unstable-locales"] }
thiserror = "2.0.17"
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "macros"] }
config = { version = "0.15.19", features = ["toml"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.30.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[dev-dependencies]
assert_fs = "1.1"
futures-test = "0.3"
assert_matches = "1.5"
