[package]
name = "web-leptos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.7.0", features = ["csr"] }
phosphor-leptos = "0.6.0"
anyhow.workspace = true
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-util = "0.3.31"
gloo-net = { version = "0.6.0", features = ["http"] }
js-sys = "=0.3.72"
log = "0.4.22"
wasm-bindgen = "= 0.2.95"
wasm-streams = "0.4.2"

[lints.clippy]
empty_docs = "allow"
