[package]
name = "web-leptos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos-use = { version = "0.15.7", features = [] }
leptos_icons = { version = "0.5.0", features = [] }
icondata = { version = "0.5.0", default-features = false, features = ["font-awesome"] }
console_error_panic_hook = "0.1.7"
shared = { path = "../shared" }
anyhow.workspace = true
console_log = "1.0.0"
futures-util = "0.3.31"
gloo-net = { version = "0.6.0", features = ["http"] }
js-sys = "0.3.77"
log = "0.4.27"
wasm-bindgen = "0.2.100"
wasm-streams = "0.4.2"
uuid = {version = "1.16.0", features = ["js"]}

[lints.clippy]
empty_docs = "allow"
