[package]
name = "Crab-News"
version = "0.1.0"
description = "A multi-platform RSS client for desktop and mobile written in Rust."
authors = ["Andrea C"]
edition = "2021"
repository = "https://github.com/crabapps/crab-news"
license = "Apache-2.0"
keywords = ["atom", "rss", "feed-reader", "rss-reader", "news-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../../shared" }
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# https://tauri.app/concept/size/
[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
